WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/Case_History__c.object-meta.xml
<CustomObject>
    <description>Case history tracks the duration of an event change on a case. This allows for better report metrics beyond the standard field history tracking.</description>
    <label>Case History</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>