WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <inlineHelpText>The case associated with the history event</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case History</relationshipLabel>
    <relationshipName>Case_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>