WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag to indicate if this history record has completed. Flag is set by the process builder flow.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>