WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <formula>TEXT( FLOOR( (If(Complete__c, LastModifiedDate, Now()) - CreatedDate) ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (If(Complete__c, LastModifiedDate, Now()) - CreatedDate) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (If(Complete__c, LastModifiedDate, Now()) - CreatedDate) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to show readable duration in: Days, Hours and Minutes</inlineHelpText>
    <label>Event Duration</label>
    <type>Text</type>
</CustomField>