WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/fields/Event_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration_Minutes__c</fullName>
    <formula>(If(Complete__c, LastModifiedDate, Now()) - CreatedDate)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration to be used in reporting.</inlineHelpText>
    <label>Event Duration Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>