WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <inlineHelpText>Field types tracked. This is set by the process builder flow.</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>