WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/fields/Event_Value__c.field-meta.xml
<CustomField>
    <fullName>Event_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the field value that is changed, this will accept any value currently set up and being used. This is set by the process builder flow.</inlineHelpText>
    <label>Event Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>