WexGit/Wex_DX/force-app/main/default/objects/Case_History__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <formula>IF(IsPickVal(Event_Type__c, &apos;Ownership&apos;)  &amp;&amp;   Begins(Event_Value__c, &apos;Serv Ops - &apos;), &apos;Queue&apos;, &apos;User&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership Type</label>
    <type>Text</type>
</CustomField>